# Benchmark

./: docker-compose.yml  readme.md
Benchmark.Dotnet/: Program.cs
Benchmark.Dotnet/Models/: User.cs
Benchmark.Dotnet/Properties/: launchSettings.json
Benchmark.Golang/: .gitignore  go.mod  go.sum  main.go
Benchmark.Golang/models/: User.go
Benchmark.Nodejs/: index.js  package-lock.json  package.json
Benchmark.PHP/public/: index.php
Benchmark.Python/: app.py
Benchmark.Ruby/: dockerfile
Benchmark.Ruby/models/: user.rb
Benchmark.Rust/: Cargo.toml
Benchmark.Rust/actix/: .gitignore  Cargo.toml
Benchmark.Rust/actix/src/: main.rs
Benchmark.Rust/actix/src/models/: user.rs
Benchmark.Rust/rocket/: Cargo.toml  Rocket.toml
Benchmark.Rust/rocket/src/models/: user.rs
Benchmark.Rust/src/: main.rs
Benchmark.Rust/src/models/: user.rs
Benchmark.Springboot/: pom.xml
src/Benchmark.Dotnet/: Benchmark.Dotnet.csproj  Dockerfile  Program.cs
src/Benchmark.Dotnet/Models/: User.cs
src/Benchmark.Dotnet/Properties/: launchSettings.json
src/Benchmark.Golang/: Dockerfile  go.mod  main.go
src/Benchmark.Golang/models/: User.go
src/Benchmark.Nodejs/: Dockerfile  index.js  package-lock.json  package.json
src/Benchmark.Nodejs/models/: user.js
src/Benchmark.PHP/: Dockerfile  composer.json
src/Benchmark.Python/: Dockerfile  main.py  requirements.txt
src/Benchmark.Quarkus/: README.md  pom.xml
src/Benchmark.Ruby/: app.rb  dockerfile  puma.rb
src/Benchmark.Rust/: Cargo.toml  Dockerfile
src/Benchmark.Rust/src/: main.rs
(+17 files in other folders)
