[package]
name = "Benchmark-Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8.1", features = ["v4"] }

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]
