[package]
name = "Benchmark-Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8.1", features = ["v4"] }
