[package]
name = "benchmark-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
json = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8.1", features = ["v4", "serde"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[[bin]]
name = "benchmark-rust"
path = "src/main.rs"